[FEAT] HW5_6 3.5 almost ready

--- a/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
+++ b/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 104,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 105,
       "metadata": {},
       "outputs": [
         {
@@ -340,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 106,
       "metadata": {},
       "outputs": [
         {
@@ -484,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 107,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -536,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 108,
       "metadata": {},
       "outputs": [
         {
@@ -548,7 +548,7 @@
               "Eq(T, L1**2*m1*Derivative(theta1(t), t)**2/2 + m2*(L1**2*Derivative(theta1(t), t)**2 + 2*L1*L2*cos(theta1(t) - theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + L2**2*Derivative(theta2(t), t)**2)/2)"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 108,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -584,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [
         {
@@ -654,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 110,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -690,7 +690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 111,
       "metadata": {},
       "outputs": [
         {
@@ -773,7 +773,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 112,
       "metadata": {},
       "outputs": [
         {
@@ -837,7 +837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 113,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -884,7 +884,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 114,
       "metadata": {},
       "outputs": [
         {
@@ -939,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 115,
       "metadata": {},
       "outputs": [
         {
@@ -996,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 116,
       "metadata": {},
       "outputs": [
         {
@@ -1047,7 +1047,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 117,
       "metadata": {},
       "outputs": [
         {
@@ -1059,7 +1059,7 @@
               "Eq(Ugen, -g*(L1*m1*cos(theta1(t)) + L1*m2*cos(theta1(t)) + L2*m2*cos(theta2(t))))"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 117,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1082,7 +1082,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 118,
       "metadata": {},
       "outputs": [
         {
@@ -1094,7 +1094,7 @@
               "Eq(L, L1**2*m1*Derivative(theta1(t), t)**2/2 + g*(L1*m1*cos(theta1(t)) + L1*m2*cos(theta1(t)) + L2*m2*cos(theta2(t))) + m2*(L1**2*Derivative(theta1(t), t)**2 + 2*L1*L2*cos(theta1(t) - theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + L2**2*Derivative(theta2(t), t)**2)/2)"
             ]
           },
-          "execution_count": 42,
+          "execution_count": 118,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1130,7 +1130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 119,
       "metadata": {},
       "outputs": [
         {
@@ -1182,7 +1182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 120,
       "metadata": {},
       "outputs": [
         {
@@ -1228,7 +1228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 121,
       "metadata": {},
       "outputs": [
         {
@@ -1291,7 +1291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 122,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1328,7 +1328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 123,
       "metadata": {},
       "outputs": [
         {
@@ -1340,7 +1340,7 @@
               "Eq(cte, L1**2*m1*Derivative(theta1(t), t)**2/2 + L1**2*m2*Derivative(theta1(t), t)**2/2 + L1*L2*m2*cos(theta1(t) - theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) - L1*g*m1*cos(theta1(t)) - L1*g*m2*cos(theta1(t)) + L2**2*m2*Derivative(theta2(t), t)**2/2 - L2*g*m2*cos(theta2(t)))"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 123,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1379,7 +1379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 124,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1407,7 +1407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 125,
       "metadata": {},
       "outputs": [
         {
@@ -1419,7 +1419,7 @@
               "L1**2*m1*Derivative(theta1(t), t)**2/2 + g*(L1*m1*cos(theta1(t)) + L1*m2*cos(theta1(t)) + L2*m2*cos(theta2(t))) + m2*(L1**2*Derivative(theta1(t), t)**2 + 2*L1*L2*cos(theta1(t) - theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + L2**2*Derivative(theta2(t), t)**2)/2"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 125,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1430,7 +1430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 126,
       "metadata": {},
       "outputs": [
         {
@@ -1477,7 +1477,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "2. Escriba la función de energía cinética en función de $\\{p_j\\}_M$."
+        "### 2. Escriba la función de energía cinética en función de $\\{p_j\\}_M$."
       ]
     },
     {
@@ -1489,7 +1489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 127,
       "metadata": {},
       "outputs": [
         {
@@ -1542,7 +1542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 128,
       "metadata": {},
       "outputs": [
         {
@@ -1554,7 +1554,7 @@
               "Eq(T_Pj, (L1**2*P2**2*m1 + L1**2*P2**2*m2 - 2*L1*L2*P1*P2*m2*cos(theta1(t) - theta2(t)) + L2**2*P1**2*m2)/(2*L1**2*L2**2*m2*(m1 - m2*cos(theta1(t) - theta2(t))**2 + m2)))"
             ]
           },
-          "execution_count": 60,
+          "execution_count": 128,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1577,6 +1577,219 @@
       "metadata": {},
       "source": [
         "En la anterior celda se puede observar la energía cinética a partir de los $P_j$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3. Escriba el Lagrangianop $\\{L_{qp}(t,\\{q_j\\}_M,\\{p_j\\}_M)\\}$ del sistema."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Del punto anterior ya tenemos las expresiones para las aceleraciones angulares en terminos de los Pj, solo basta con reemplazarlas en nuestro Lagrangiano para obtener nuestro $\\{L_{qp}(t,\\{q_j\\}_M,\\{p_j\\}_M)\\}$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 129,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle L_{P} = \\frac{2 L_{1}^{2} L_{2}^{2} g m_{2} \\left(m_{1} - m_{2} \\cos^{2}{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} + m_{2}\\right)^{2} \\left(L_{1} m_{1} \\cos{\\left(\\theta_{1}{\\left(t \\right)} \\right)} + L_{1} m_{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} \\right)} + L_{2} m_{2} \\cos{\\left(\\theta_{2}{\\left(t \\right)} \\right)}\\right) + m_{1} m_{2} \\left(L_{1} P_{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} - L_{2} P_{1}\\right)^{2} + m_{2}^{2} \\left(L_{1} P_{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} - L_{2} P_{1}\\right)^{2} - 2 m_{2} \\left(L_{1} P_{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} - L_{2} P_{1}\\right) \\left(L_{1} P_{2} m_{1} + L_{1} P_{2} m_{2} - L_{2} P_{1} m_{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)}\\right) \\cos{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} + \\left(L_{1} P_{2} m_{1} + L_{1} P_{2} m_{2} - L_{2} P_{1} m_{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)}\\right)^{2}}{2 L_{1}^{2} L_{2}^{2} m_{2} \\left(m_{1} - m_{2} \\cos^{2}{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} + m_{2}\\right)^{2}}$"
+            ],
+            "text/plain": [
+              "Eq(L_P, (2*L1**2*L2**2*g*m2*(m1 - m2*cos(theta1(t) - theta2(t))**2 + m2)**2*(L1*m1*cos(theta1(t)) + L1*m2*cos(theta1(t)) + L2*m2*cos(theta2(t))) + m1*m2*(L1*P2*cos(theta1(t) - theta2(t)) - L2*P1)**2 + m2**2*(L1*P2*cos(theta1(t) - theta2(t)) - L2*P1)**2 - 2*m2*(L1*P2*cos(theta1(t) - theta2(t)) - L2*P1)*(L1*P2*m1 + L1*P2*m2 - L2*P1*m2*cos(theta1(t) - theta2(t)))*cos(theta1(t) - theta2(t)) + (L1*P2*m1 + L1*P2*m2 - L2*P1*m2*cos(theta1(t) - theta2(t)))**2)/(2*L1**2*L2**2*m2*(m1 - m2*cos(theta1(t) - theta2(t))**2 + m2)**2))"
+            ]
+          },
+          "execution_count": 129,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "Lagrangiano_Pj = simplify(Lagrangiano.subs(\n",
+        "    {Derivative(theta1, t):solutions_angular_acelerations[0],\n",
+        "    Derivative(theta2, t): solutions_angular_acelerations[1]}))\n",
+        "\n",
+        "# Hacemos una ecuación para la nueva expresion de la fucion de energia cinética\n",
+        "L_P = symbols('L_P')\n",
+        "Lagrangiano_Pj_equation = Eq(L_P, Lagrangiano_Pj)\n",
+        "\n",
+        "# Imprimiendo nuestros resultados\n",
+        "Lagrangiano_Pj_equation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "En la anterior celda se puede observar el lagrangiano en terminos de los $q_j$ y $p_j$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4. Escriba el Hamiltoniano $\\{H(t,\\{q_j\\}_M,\\{p_j\\}_M)\\}$ del sistema.\n",
+        "$$H(q_j, p_j, t) = \\sum_k p_k \\dot{q}_k(q_j, p_j, t) - L(q_j, p_j, t)$$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Listo ahora con esta expresión podemos, encontrar nuestro hamiltoniano, hagamos una función que me encuentre el hamiltoniano de un sistema a partir de las expresion para $\\dot{q}_k(q_j, p_j, t)$, los $p_k$ y la expresión Lqp"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 130,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def Hamiltoniano_(Lqp, pk, dotqj_pk):\n",
+        "    \"\"\" \n",
+        "    Calcula el Hamiltoniano a partir de los q_k(q_j, p_j, t), los p_k y el\n",
+        "    Lagrangiano en términos de q y p.\n",
+        "    \n",
+        "    Parámetros:\n",
+        "    - Lqp: sympy.Expr\n",
+        "        Lagrangiano del sistema en términos de p y q.\n",
+        "    - pk: list\n",
+        "        Lista de los p_k del sistema.\n",
+        "    - dotqj_pk: list\n",
+        "        Lista de q_k punto en términos de q y p.\n",
+        "    \n",
+        "    Retorna:\n",
+        "    - sympy.Expr: Expresión para el Hamiltoniano.\n",
+        "    \"\"\"\n",
+        "   \n",
+        "    Hamil = sum(p * q_dot for p, q_dot in zip(pk, dotqj_pk))\n",
+        "    Hamil -= Lqp\n",
+        "\n",
+        "    return simplify(Hamil)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 131,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle H = \\frac{- L_{1}^{3} L_{2}^{2} g m_{1}^{2} m_{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} \\right)} + L_{1}^{3} L_{2}^{2} g m_{1} m_{2}^{2} \\cos^{2}{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} \\cos{\\left(\\theta_{1}{\\left(t \\right)} \\right)} - 2 L_{1}^{3} L_{2}^{2} g m_{1} m_{2}^{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} \\right)} + L_{1}^{3} L_{2}^{2} g m_{2}^{3} \\cos^{2}{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} \\cos{\\left(\\theta_{1}{\\left(t \\right)} \\right)} - L_{1}^{3} L_{2}^{2} g m_{2}^{3} \\cos{\\left(\\theta_{1}{\\left(t \\right)} \\right)} - L_{1}^{2} L_{2}^{3} g m_{1} m_{2}^{2} \\cos{\\left(\\theta_{2}{\\left(t \\right)} \\right)} + L_{1}^{2} L_{2}^{3} g m_{2}^{3} \\cos^{2}{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} \\cos{\\left(\\theta_{2}{\\left(t \\right)} \\right)} - L_{1}^{2} L_{2}^{3} g m_{2}^{3} \\cos{\\left(\\theta_{2}{\\left(t \\right)} \\right)} + \\frac{L_{1}^{2} P_{2}^{2} m_{1}}{2} + \\frac{L_{1}^{2} P_{2}^{2} m_{2}}{2} - L_{1} L_{2} P_{1} P_{2} m_{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} + \\frac{L_{2}^{2} P_{1}^{2} m_{2}}{2}}{L_{1}^{2} L_{2}^{2} m_{2} \\left(m_{1} - m_{2} \\cos^{2}{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} + m_{2}\\right)}$"
+            ],
+            "text/plain": [
+              "Eq(H, (-L1**3*L2**2*g*m1**2*m2*cos(theta1(t)) + L1**3*L2**2*g*m1*m2**2*cos(theta1(t) - theta2(t))**2*cos(theta1(t)) - 2*L1**3*L2**2*g*m1*m2**2*cos(theta1(t)) + L1**3*L2**2*g*m2**3*cos(theta1(t) - theta2(t))**2*cos(theta1(t)) - L1**3*L2**2*g*m2**3*cos(theta1(t)) - L1**2*L2**3*g*m1*m2**2*cos(theta2(t)) + L1**2*L2**3*g*m2**3*cos(theta1(t) - theta2(t))**2*cos(theta2(t)) - L1**2*L2**3*g*m2**3*cos(theta2(t)) + L1**2*P2**2*m1/2 + L1**2*P2**2*m2/2 - L1*L2*P1*P2*m2*cos(theta1(t) - theta2(t)) + L2**2*P1**2*m2/2)/(L1**2*L2**2*m2*(m1 - m2*cos(theta1(t) - theta2(t))**2 + m2)))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "# Usando la función anterior para hallar la expresión de nuestro Hamiltoniano\n",
+        "Hamiltoniano = Hamiltoniano_(Lagrangiano_Pj,\n",
+        "                              [P1, P2],\n",
+        "                              solutions_angular_acelerations)\n",
+        "\n",
+        "# Hagamos una ecuación para nuestro hamiltoniano\n",
+        "H = symbols('H') # Definiendo el simbolo para el hamiltoniano\n",
+        "Hamiltoniano_equation = Eq(H, Hamiltoniano)\n",
+        "\n",
+        "# Imprimamos nuestros resultados\n",
+        "display(Hamiltoniano_equation)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "En la anterior celda podemos observar la expresion para el Hamiltoniano del pendulo doble"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5. A partir del Hamiltoniano escriba explícitamente las ecuaciones de movimiento usando las ecuaciones canónicas."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\\begin{equation}\n",
+        "\\begin{cases}\n",
+        "\\dot{q}_j = +\\frac{\\partial H}{\\partial p_j} & M \\\\\n",
+        "\\dot{p}_j = -\\frac{\\partial H}{\\partial q_j} & M\n",
+        "\\end{cases}\n",
+        "\\end{equation}\n",
+        "\n",
+        "\\begin{equation}\n",
+        "\\frac{\\partial H}{\\partial t} = -\\frac{\\partial L_{qp}}{\\partial t}\n",
+        "\\end{equation}\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Definamos algunas funciones: Una que que encuentre $\\dot{q}_j$ a partir de H al igual para $\\dot{p}_j$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 135,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Defininedo la funcion para qj\n",
+        "dotqj_function = lambda H, pj: [simplify(H.diff(i)) for i in pj]\n",
+        "\n",
+        "# Definiendo la funcion para pj punto \n",
+        "dotpj_function = lambda H, qj: [-simplify(H.diff(i)) for i in qj]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 137,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "True\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "[None, None]"
+            ]
+          },
+          "execution_count": 137,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Usemos estas funciones para hallar nuestros dotqj y dotpj\n",
+        "dotqj = dotqj_function(Hamiltoniano, [P1, P2])\n",
+        "dotpj = dotpj_function(Hamiltoniano, [theta1, theta2])\n",
+        "\n",
+        "# Nosotros ya tenemos una experesión para dotqj a partir de p, podemos igualarlas\n",
+        "dotqj_equations = [simplify(Eq(i, j)) for i, j in zip(solutions_angular_acelerations, dotqj)]\n",
+        "dotqj_equations"
       ]
     }
   ],
